Thu Jun 26 22:04:09 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* utils.cc (file_in_path): Add default load path to PATH arg if
	it begins or ends with a colon.

Wed Jun 25 13:31:06 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-lvalue.h (octave_lvalue::struct_elt_ref): Ensure val is unique.

Fri Jun 20 12:33:35 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* toplev.cc (cmd_death_handler): New function.
	(run_command_and_return_output): Insert pid of command in
	octave_child_list along with pointer to cmd_death_handler so we
	can get the exit status without having to block SIGCHLD.
	(cleanup_iprocstream): Remove pid of command from octave_child_list.

Sun Jun 15 16:11:13 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* OPERATORS/op-cs-s.cc (ldiv): Doh, v1 is complex, v2 is real.

	* Makefile.in (DISTFILES): Add mkops to the list.
	(dist): Correctly link files in DLD-FUNCTIONS, OPERATORS, and
	TEMPLATE-INST subdirectories.

Fri Jun  6 04:30:57 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/npsol.cc, DLD-FUNCTIONS/qpsol.cc,
	DLD-FUNCTIONS/fsqp.cc: Delete.
	* Makefile.in (DLD_XSRC): Remove them from the list.

	* utils.cc (search_path_for_file): New arg, do_tilde_expansion.
	If TRUE, perform tilde expansion on path before searching.
	(file_in_path): Call search_path_for_file with do_tilde_expansion
	set to false, since we've already performed tilde expansion on the
	load path.

	* defaults.cc (loadpath): Perform tilde expansion here.

Thu Jun  5 01:42:39 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in: Make building of static library optional.
	(liboctave.$(SHLEXT_VER)): Add $(SONAME_FLAGS) to command.

	* dynamic-ld.cc (octave_shl_load_dynamic_loader::resolve_reference): 
	Call shl_findsym with type set to TYPE_UNDEFINED.

	* Makefile.in (stamp-picdir): Delete.
	(pic): New target.  Don't worry so much about creating pic
	directory only when it is really needed.
	(stamp-interp): Delete.