@@ -1,3 +1,11 @@
+Wed Jul  2 16:47:09 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* matherr.c: New file.  Move matherr function here.
+	* sysdep.cc: From here.
+	* Makefile.in (DIST_SRC): Add matherr.c to the list.
+
+	* error.cc (handle_message): Avoid bug in g++ snapshot.
+
 Thu Jun 26 22:04:09 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* utils.cc (file_in_path): Add default load path to PATH arg if
